Serve static files. Ignore nodejs module files

--- a/views/content.jade
+++ b/views/content.jade
@@ -1,5 +1,9 @@
 extends main
 block content
-  h1 malawiexams.com
-  ul
-    li Status: #{message}
+	h1 malawiexams.com
+	ul
+		li Status: #{message}
+	p Developed by:
+		br
+		a(href='http://zakwathu.org/')
+			img(src='/images/zakwathu_logo.jpg')
