--- a/views/main.jade
+++ b/views/main.jade
@@ -2,5 +2,6 @@ doctype html
 html(lang="en")
   head
     title="Malawi Exams Preparation Portal"
+    link(href='/css/style.css', rel='stylesheet')
   body
     block content
